now working pdf on live

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -49,7 +49,7 @@
 <body>
   {{> header}} <!-- Include the header partial -->
 
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!--Popper 1.12.9 Script-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
