change size of pdf

--- a/template.ejs
+++ b/template.ejs
@@ -4,7 +4,9 @@
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
       <title>file_1704892920196</title>
       <meta name="author" content="Kavita"/>
-      <style type="text/css"> * {margin:0; padding:0; text-indent:0; }
+      <style type="text/css">
+         html{zoom: 0.7;}
+         * {margin:0; padding:0; text-indent:0; }
          p { color: black; font-family:"Times New Roman", serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 12pt; margin:0pt; }
          .s1 { color: black; font-family:Cambria, serif; font-style: normal; font-weight: bold; text-decoration: none; font-size: 11pt; }
          .h1 { color: black; font-family:Cambria, serif; font-style: normal; font-weight: bold; text-decoration: none; font-size: 11pt; }
@@ -29,7 +31,7 @@
 
 
    %>
-   <body style="padding-left: 100pt;text-indent: 0pt;text-align: left;">
+   <body style="padding-left: 50pt;text-indent: 0pt;text-align: left;">
       <p style="padding-left: 197pt;text-indent: 0pt;text-align: left;">
          <span>
       <table border="0" cellspacing="0" cellpadding="0"><tr><td><img 
