--- a/views/xls-to-csv.hbs
+++ b/views/xls-to-csv.hbs
@@ -65,7 +65,12 @@
 
                         {{#if success}}
                               <p style="color: green;">{{success}}</p>
-                              <a href="/download/{{downloadPath}}">Download CSV File</a>
+                              {{!-- <a href="/download/{{downloadPath}}">Download CSV File</a> --}}
+
+                              <a 
+                              href="/download/{{downloadPath}}"
+                              class="w-10 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+                              >Download CSV File</a>
 
                         {{else}}
 
