--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RVS Media Tools</title>
 
-  <!--Boostrap 4.0.0 CSS-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <!--Boostrap 4.0.0 CSS
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+
+  <!--Boostrap 5.3.3 CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <!--Font Awesome Icons-->
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
