--- a/views/biometric-calculations.hbs
+++ b/views/biometric-calculations.hbs
@@ -56,10 +56,24 @@
           <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="main-container2">
-                   <form method="post" action="/"  enctype="multipart/form-data" id="form">
+                   <form method="post" action="/biometric-calculations"  enctype="multipart/form-data" id="form">
                         <div
                         class="max-w-xl m-auto h-screen flex flex-col align-center justify-center"
                         >
+
+
+                        {{#if success}}
+                              <p style="color: green;">{{success}}</p>
+                              {{!-- <a href="/download/{{downloadPath}}">Download CSV File</a> --}}
+
+                              <a 
+                              href="/download/{{downloadPath}}"
+                              class="w-10 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+                              >Download CSV File</a>
+
+                        {{else}}
+
+
                         <div class="flex flex-col w-full items-center justify-center bg-grey-lighter">
                             <div id="drop-area">
 
@@ -128,6 +142,8 @@
                         </span></p>
 
                         </div>
+
+                        {{/if}}
 
                     </form>
                 </div>
