--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
 {{!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> --}}
 
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar fixed-top navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand" href="/">RVS Tools</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
