--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,14 +1,20 @@
 <main>
     <section id="home">
-      <div class="container mt-6">
+      <div class="container-xxl mt-6">
         <div class="jumbotron mb-1">
           <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="main-container">
                   <ul class="grid-wrapper">
-                    <a href="/xls-to-csv"><li>XLS to CSVjhjh</li></a>
-                    <a href="/biometric-calculations"><li>Biometric Calculations</li></a>
-                    <a href="/generate-salary-slips"><li>Generate Salary Slips</li></a>
+                    <li>
+                      <a href="/xls-to-csv"><li>XLS to CSVjhjh</li></a>
+                    </li>
+                     <li>
+                      <a href="/biometric-calculations"><li>Biometric Calculations test</li></a>
+                    </li>
+                     <li class="grid-wrapper-list">
+                      <a href="/generate-salary-slips"><li>Generate Salary Slips</li></a>
+                    </li>                   
                   </ul>
                 </div>
             </div>
