--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,19 +1,19 @@
-<main>
+
     <section id="home">
-      <div class="container-xxl mt-6">
+      <div class="container container-xxl mt-6">
         <div class="jumbotron mb-1">
           <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="main-container">
                   <ul class="grid-wrapper">
-                    <li>
-                      <a href="/xls-to-csv"><li>XLS to CSVjhjh</li></a>
+                    <li class="grid-wrapper-list rounded-4">
+                      <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSVjhjh</a>
                     </li>
-                     <li>
-                      <a href="/biometric-calculations"><li>Biometric Calculations test</li></a>
+                    <li class="grid-wrapper-list rounded-4">
+                      <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations test</a>
                     </li>
-                     <li class="grid-wrapper-list">
-                      <a href="/generate-salary-slips"><li>Generate Salary Slips</li></a>
+                    <li class="grid-wrapper-list rounded-4">
+                      <a class="h3 fs-2 fw-600" href="/generate-salary-slips">Generate Salary Slips</a>
                     </li>                   
                   </ul>
                 </div>
@@ -23,4 +23,3 @@
         </div>
       </div>
     </section>
-  </main>
