--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,7 +5,8 @@
 <header>
   <nav class="navbar fixed-top navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="/">RVS Tools</a>
+      <a class="navbar-brand" href="/">
+      RVS Tools</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,7 +19,7 @@
             <a class="nav-link" href="/all">Bulk post</a>
           </li> --}}
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link fw-18 fw-600" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
