--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,49 @@
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
 
+@font-face {
+  font-family: 'PlusJakarta-Medium';
+  src: url('../font/PlusJakarta-Medium.ttf');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Big-Caslon-Medium';
+  src: url('../font/Big-Caslon-Medium.ttf');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'Tobias-Thin';
+  src: url('../font/Tobias-Thin.woff') format('woff');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'Tobias-Thin2';
+  src: url('../font/Tobias-Thin.woff2');
+  font-weight: normal;
+}
+@font-face {
+  font-family: "PlusJakarta-Regular";
+  src: url("../font/PlusJakartaSans-Regular.ttf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "PlusJakarta-Light";
+  src: url("../font/PlusJakartaSans-Light.ttf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "PlusJakarta-SemiBold";
+  src: url("../font/PlusJakartaSans-Semibold.ttf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "PlusJakarta-Medium";
+  src: url("../font/PlusJakartaSans-Medium.ttf");
+  font-weight: normal;
+}
+
 *,
 ::before,
 ::after {
@@ -97,6 +140,7 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: inherit;
+  font-family: "Tobias-Thin";
 }
 
 /*
@@ -811,9 +855,7 @@ video {
   font-weight: 600;
 }
 /*-----------header css--start --------------*/
-header nav{
-  background-color: rgb(239 41 90 / 13%);
-}
+
 .navbar-expand-lg .navbar-collapse{
   justify-content: flex-end;
 }
@@ -834,15 +876,22 @@ footer{
 
 
 /**---------------home css start --------------*/
-main{
-  margin: 7rem 0rem;
+.fw-3{
+  font-size: 3.25rem;
+}
+.my-80{
+  margin: 80px 0px;
 }
 .container{
   margin: 0 auto;
   max-width: 1280px;
   padding: 0rem 1rem;
 }
-
+.banner{
+  background-color: #1a212a;
+  min-height: 400px;
+  padding: 80px 0px;
+}
 .grid-wrapper{
   --auto-grid-min-size: 19rem;
   display: grid;
@@ -853,33 +902,82 @@ main{
   box-sizing: border-box;
 font-family: 'Montserrat', sans-serif;
 }
-
-ul.grid-wrapper li{
-  background-color: #ef295a99;
+.grid-wrapper .grid-wrapper-list {
   min-height: 250px;
-  padding: 0px 30px;
-  border: 1px solid #ef295a99 ;
 }
-ul.grid-wrapper li{
+.banner, .grid-wrapper .grid-wrapper-list{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-ul.grid-wrapper li{
+.banner{
+  align-items:flex-end;
+}
+.grid-wrapper .grid-wrapper-list{
   font-size: 24px;
   color: #ffffff;
   text-transform: capitalize;
   text-align: center;
 }
-ul.grid-wrapper li{
+.grid-wrapper .grid-wrapper-list {
   transition: ease-out 0.5s;
 }
-ul.grid-wrapper li:hover{
+/* .grid-wrapper .grid-wrapper-list:hover{
   background-color: #fff;
   color:  #ef295a99;
   transition: ease-in 0.5s;
+} */
+
+
+/*_-----------------flip-card --------css start-----*/
+.flip-card {
+  background-color: transparent;
+  perspective: 1000px;
 }
 
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+}
 
+.flip-card:focus {
+    outline: 0;
+}
+
+.flip-card:hover .flip-card-inner,
+.flip-card:focus .flip-card-inner{
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.flip-card-front {
+  background-color: #ef295a99;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flip-card-back {
+  background-color: #ef295a99;
+  transform: rotateY(180deg);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*_-----------------flip-card --------css end-----*/
 
 /**---------------home css end --------------*/
