--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,21 +1,50 @@
 
-    <section id="home">
+    <section class="banner">
+      <div class="container">
+        <div class="content">
+          <h1 class="h1 fw-3 text-white fw-normal">RVS Tool</h1>
+        </div>
+      </div>
+    </section>
+    <section id="home" class="my-80">
       <div class="container container-xxl mt-6">
         <div class="jumbotron mb-1">
           <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="main-container">
-                  <ul class="grid-wrapper">
-                    <li class="grid-wrapper-list rounded-4">
-                      <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSVjhjh</a>
-                    </li>
-                    <li class="grid-wrapper-list rounded-4">
-                      <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations test</a>
-                    </li>
-                    <li class="grid-wrapper-list rounded-4">
-                      <a class="h3 fs-2 fw-600" href="/generate-salary-slips">Generate Salary Slips</a>
-                    </li>                   
-                  </ul>
+                  <div class="grid-wrapper">
+                    <div class="grid-wrapper-list flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front rounded-4 ">
+                            <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSVjhjh</a>
+                        </div>
+                        <div class="flip-card-back rounded-4">
+                            <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSVjhjh</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-wrapper-list flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front rounded-4 ">
+                           <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations test</a>
+                        </div>
+                        <div class="flip-card-back rounded-4">
+                           <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations test</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-wrapper-list flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front rounded-4 ">
+                            <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Sdivps</a>
+                        </div>
+                        <div class="flip-card-back rounded-4">
+                            <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Sdivps</a>
+                        </div>
+                      </div>
+                    </div>
+                                     
+                  </div>
                 </div>
             </div>
            
