--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,7 +6,7 @@
   <nav class="navbar fixed-top navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand" href="/">
-      RVS Tools</a>
+      <img src="/assets/rvs-logo.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
