add new file and css to calci page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,5 @@
 
-    <section class="banner">
-      <div class="container">
-        <div class="content">
-          <h1 class="h1 fw-3 text-white fw-normal">RVS Tool</h1>
-        </div>
-      </div>
-    </section>
+<!--home card section--->
     <section id="home" class="my-80">
       <div class="container container-xxl mt-6">
         <div class="jumbotron mb-1">
@@ -14,32 +8,34 @@
                 <div class="main-container">
                   <div class="grid-wrapper">
                     <div class="grid-wrapper-list flip-card">
-                      <div class="flip-card-inner">
-                        <div class="flip-card-front rounded-4 ">
-                            <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSVjhjh</a>
+                      
+                        <div class="flip-card-inner">
+                          <div class="flip-card-front rounded-4 pd-lft-rgt">
+                              <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSV</a>
+                          </div>
+                          <div class="flip-card-back rounded-4 pd-lft-rgt">
+                              <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSV</a>
+                          </div>
                         </div>
-                        <div class="flip-card-back rounded-4">
-                            <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSVjhjh</a>
+                     
+                    </div>
+                    <div class="grid-wrapper-list flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front rounded-4 pd-lft-rgt">
+                           <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations</a>
+                        </div>
+                        <div class="flip-card-back rounded-4 pd-lft-rgt">
+                           <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations</a>
                         </div>
                       </div>
                     </div>
                     <div class="grid-wrapper-list flip-card">
                       <div class="flip-card-inner">
-                        <div class="flip-card-front rounded-4 ">
-                           <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations test</a>
+                        <div class="flip-card-front rounded-4 pd-lft-rgt">
+                            <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Slips</a>
                         </div>
-                        <div class="flip-card-back rounded-4">
-                           <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations test</a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="grid-wrapper-list flip-card">
-                      <div class="flip-card-inner">
-                        <div class="flip-card-front rounded-4 ">
-                            <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Sdivps</a>
-                        </div>
-                        <div class="flip-card-back rounded-4">
-                            <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Sdivps</a>
+                        <div class="flip-card-back rounded-4 pd-lft-rgt">
+                            <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Slips</a>
                         </div>
                       </div>
                     </div>
