--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -20,7 +20,8 @@
 </head>
 <body>
   {{> header}} <!-- Include the header partial -->
-
+  {{> banner}}
+ 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!--Popper 1.12.9 Script-->
