--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -19,7 +19,7 @@
             <a class="nav-link" href="/all">Bulk post</a>
           </li> --}}
           <li class="nav-item">
-            <a class="nav-link fw-18 fw-600" href="#contact">Contact</a>
+            <a class="nav-link fw-18 fw-600 text-white" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
