--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,8 +6,19 @@
           <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="main-container">
-                  <div class="grid-wrapper">
-                    <div class="grid-wrapper-list flip-card">
+                  
+                  <div class="grid-wrapper ">
+                     <div class="grid-wrapper-list  rounded-4 pd-lft-rgt">
+                              <a class="h3 fs-2 fw-600" href="/xls-to-csv">XLS to CSV</a>
+                      </div>
+                      <div class="grid-wrapper-list rounded-4 pd-lft-rgt">
+                        <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations</a>
+                      </div>
+                      <div class="grid-wrapper-list rounded-4 pd-lft-rgt">
+                        <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Slips</a>
+                    </div>
+
+                    {{!-- <div class="grid-wrapper-list flip-card">
                       
                         <div class="flip-card-inner">
                           <div class="flip-card-front rounded-4 pd-lft-rgt">
@@ -38,7 +49,7 @@
                             <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Slips</a>
                         </div>
                       </div>
-                    </div>
+                    </div> --}}
                                      
                   </div>
                 </div>
