--- a/views/biometric-calculations.hbs
+++ b/views/biometric-calculations.hbs
@@ -59,7 +59,7 @@
                    <form method="post" action="/"  enctype="multipart/form-data" id="form">
                         <div class="max-w-xl m-auto flex flex-col align-center justify-center"
                         >
-                        <div class="flex flex-col w-full items-center justify-center bg-grey-lighter">
+                        <div class="flex flex-col w-full items-center justify-center bg-grey-lighter text-danger">
                             <div id="drop-area">
                               <label
                                   class="w-64 flex flex-col items-center px-4 py-7 bg-white text-gray-500 rounded-lg shadow-lg tracking-wide uppercase border border-blue cursor-pointer hover:text-teal-800"
@@ -101,11 +101,11 @@
 
                         
                         <!-- Button -->
-                            <div class="mt-6">
+                            <div class="mt-5 mt-4 text-center">
                             <button
                                 id="gen_btn"
                                 type="submit"
-                                class="w-10 m-auto fw-18 rounded-md"
+                                class="btn w-10 m-auto fw-18 rounded-md btn-border-radius btn-dark text-white "
                             >
                                 Generate
                             </button>
@@ -114,7 +114,7 @@
                             href="/home"
                             style="display:none;"
                             id="refresh"
-                            class=" flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+                            class="btn w-10 m-auto fw-18 rounded-md btn-border-radius btn-dark text-white "
                             >Refresh</Button>
 
                             </div>
