--- a/views/generate-salary-slips.hbs
+++ b/views/generate-salary-slips.hbs
@@ -51,10 +51,10 @@
 
 <main>
     <h2>Generate Salary Slips</h2>
-  <p>Generate salary slips for employees here.</p>
-    <section id="biometric-calculations">
+    <p>Generate salary slips for employees here.</p>
+    <section id="biometric-calculations" class="my-80">
       <div class="container">
-        <div style="background-color: #e9ecef;">
+        <div>
           <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="main-container2">
@@ -69,12 +69,12 @@
 
                               {{!-- {{filenames}} --}}
                               </div>
-                                <p id="fileOutput" class=" text-lg text-center font-mono mt-6 hidden">
+                                <p id="fileOutput" class="text-lg text-center font-mono mt-6 hidden">
                                   
                                 <button
                                     id="downloadbtn"
                                     type="submit"
-                                    class="w-10 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+                                    class="btn w-10 m-auto fw-18 rounded-md btn-border-radius btn-dark text-white "
                                 >
                                     Download zip
                                 </button>
@@ -93,9 +93,9 @@
                       </section>
                    <form method="post" action="/generate-salary-slips" enctype="multipart/form-data" id="form">
                         <div
-                        class="max-w-xl m-auto h-screen flex flex-col align-center justify-center"
+                        class="max-w-xl m-auto flex flex-col align-center justify-center"
                         >
-                        <div class="flex flex-col w-full items-center justify-center bg-grey-lighter">
+                        <div class="flex flex-col w-full items-center justify-center bg-grey-lighter text-danger">
                             <div id="drop-area">
 
                             <label
@@ -138,11 +138,11 @@
 
                         
                         <!-- Button -->
-                            <div class="mt-6">
+                            <div class="mt-5 mt-4 text-center">
                             <button
                                 id="gen_btn"
                                 type="submit"
-                                class="w-10 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+                                class="btn w-10 m-auto fw-18 rounded-md btn-border-radius btn-dark text-white "
                             >
                                 Generate
                             </button>
@@ -151,7 +151,7 @@
                             href="/home"
                             style="display:none;"
                             id="refresh"
-                            class="w-10 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+                            class="btn w-10 m-auto fw-18 rounded-md btn-border-radius btn-dark text-white "
                             >Refresh</Button>
 
                             </div>
