--- a/public/css/style.css
+++ b/public/css/style.css
@@ -986,6 +986,27 @@ font-family: 'Montserrat', sans-serif;
 
 /**---------------home css end --------------*/
 
+#loading{
+  width: 50%;
+}
+#loading .skeleton-box{
+  display: inline-block;
+  min-height: 200px;
+  width: 100%;
+  margin: 0 auto;
+}
+.skeleton-box {
+  border-radius: 8px;
+  background-size: 200% 100% !important;
+  background:linear-gradient(90deg, #ddddddf5 0px, #e7e7e7 50px, #ddd 100px);
+  animation: load 1s linear infinite;
+}
+
+@keyframes load {
+  0% { background-position-x: -100px; }
+  100% { background-position-x: -100%; }
+}
+
 
 /*---------media  queries----------*/
 @media screen and (max-width: 1024px){
