--- a/views/biometric-calculations.hbs
+++ b/views/biometric-calculations.hbs
@@ -64,7 +64,7 @@
 
 
                         {{#if success}}
-                              <p style="color: green;">{{success}}</p>
+                              <p class="mt-5 mb-5 text-success text-center">{{success}}</p>
                               {{!-- <a href="/download/{{downloadPath}}">Download CSV File</a> --}}
 
                               <a 
@@ -77,38 +77,19 @@
 
                         <div class="flex flex-col w-full items-center justify-center bg-grey-lighter">
                             <div id="drop-area">
-                              <label
-                                  class="w-64 flex flex-col items-center px-4 py-7 bg-white text-gray-500 rounded-lg shadow-lg tracking-wide uppercase border border-blue cursor-pointer hover:text-teal-800"
-                              >
-                                <img src="assets/csv-file-icon.svg" width="32" />
-                                <span class="mt-2 leading-normal">Select an csv</span> 
-                                <input type="file" id="csv" name="csv" accept=".csv" class="hidden">
+                                <label
+                                    class="w-64 flex flex-col items-center px-4 py-7 bg-white text-gray-500 rounded-lg shadow-lg tracking-wide uppercase border border-blue cursor-pointer hover:text-teal-800"
+                                >
+                                  <img src="assets/csv-file-icon.svg" width="32" />
+                                  <span class="mt-2 leading-normal">Select an csv</span> 
+                                  <input type="file" id="csv" name="csv" accept=".csv" class="hidden">
 
-                            </label>
+                                </label>
                                 <div id="status" /></div>
                             </div>
 
-                            <div id="loading" style="display:none;">
-                                <div class="scene">
-                                <div class="shadow"></div>
-                                <div class="jumper">
-                                    <div class="spinner">
-                                    <div class="scaler">
-                                        <div class="loader">
-                                        <div class="cuboid">
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
-                                
-                                </div>
+                            <div id="loading">
+                              <span class="skeleton-box"></span>
                             </div>
 
 
