--- a/views/generate-salary-slips.hbs
+++ b/views/generate-salary-slips.hbs
@@ -49,7 +49,7 @@
     }
   </style>  
 
-<main>
+
     <h2>Generate Salary Slips</h2>
     <p>Generate salary slips for employees here.</p>
     <section id="biometric-calculations" class="my-80">
@@ -109,27 +109,8 @@
                                 <div id="status" /></div>
                             </div>
                             <input type="hidden" id="results-data" value="{{results}}">
-                            <div id="loading" style="display:none;">
-                                <div class="scene">
-                                <div class="shadow"></div>
-                                <div class="jumper">
-                                    <div class="spinner">
-                                    <div class="scaler">
-                                        <div class="loader">
-                                        <div class="cuboid">
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
-                                
-                                </div>
+                            <div id="loading">
+                              <span class="skeleton-box"></span>
                             </div>
 
 
@@ -176,7 +157,6 @@
         </div>
       </div>
     </section>
-  </main>
 
 
 
