--- a/views/xls-to-csv.hbs
+++ b/views/xls-to-csv.hbs
@@ -49,7 +49,7 @@
     }
   </style>  
 
-<main>
+
     <section id="biometric-calculations" class="my-80">
       <div class="container">
         <div>
@@ -64,7 +64,7 @@
                         >
 
                         {{#if success}}
-                              <p class="text-success text-center">{{success}}</p>
+                              <p class="mt-5 mb-5 text-success text-center">{{success}}</p>
                               {{!-- <a href="/download/{{downloadPath}}">Download CSV File</a> --}}
 
                               <a 
@@ -88,27 +88,8 @@
                                 <div id="status" /></div>
                             </div>
 
-                            <div id="loading" style="display:none;">
-                                <div class="scene">
-                                <div class="shadow"></div>
-                                <div class="jumper">
-                                    <div class="spinner">
-                                    <div class="scaler">
-                                        <div class="loader">
-                                        <div class="cuboid">
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                            <div class="cuboid__side"></div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
-                                
-                                </div>
+                            <div id="loading">
+                              <span class="skeleton-box"></span>
                             </div>
 
 
@@ -140,7 +121,7 @@
                         <!-- Success message and download link -->
                           
 
-                        <p class="text-white text-lg text-center font-mono mt-2 process_bar" style="display:none;" >
+                        <p class="text-white text-lg text-center font-mono mt-2 process_bar " style="display:none;" >
                             <strong> <span class="processing"> Processing... </span></strong><span id="output-path">
                             <div class="progress-bar process_bar" style="display:none;"></div>
                         </span></p>
@@ -159,7 +140,7 @@
         </div>
       </div>
     </section>
-  </main>
+
 
 
   <script>
