--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,8 +15,11 @@
                         <a class="h3 fs-2 fw-600" href="/biometric-calculations">Biometric Calculations</a>
                       </div>
                       <div class="grid-wrapper-list rounded-4 pd-lft-rgt">
-                        <a class="h3 fs-2 fw-600" href="/generate-salary-sdivps">Generate Salary Slips</a>
-                    </div>
+                        <a class="h3 fs-2 fw-600" href="#">PNG Image Compressor</a>
+                      </div>
+                      <div class="grid-wrapper-list rounded-4 pd-lft-rgt">
+                        <a class="h3 fs-2 fw-600" href="#">JPG Image Compressor</a>
+                      </div>
 
                     {{!-- <div class="grid-wrapper-list flip-card">
                       
