--- a/views/biometric-calculations.hbs
+++ b/views/biometric-calculations.hbs
@@ -59,7 +59,7 @@
 
                    <form method="post" action="/biometric-calculations"  enctype="multipart/form-data" id="form">
                         <div
-                        class="max-w-xl m-auto h-screen flex flex-col align-center justify-center"
+                        class="max-w-xl m-auto flex flex-col align-center justify-center"
                         >
 
 
@@ -69,8 +69,7 @@
 
                               <a 
                               href="/download/{{downloadPath}}"
-                              class="w-10 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
-                              >Download CSV File</a>
+                              class="btn w-10 m-auto fw-18 rounded-md btn-border-radius btn-dark text-white ">Download CSV File</a>
 
                         {{else}}
 
