--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -68,7 +68,7 @@
             <a class="nav-link" href="/all">Bulk post</a>
           </li> --}}
           <li class="nav-item">
-            <a class="nav-link fw-18 fw-600 text-white" href="#contact">Contact</a>
+            <a class="nav-link fw-18 fw-600 text-white" target="_blank" href="https://www.rvsmedia.co.uk/contact-us/">Contact</a>
           </li>
         </ul>
       </div>
